# badger-brian

./: .gitignore  .yarnrc.yml  Makefile  README.md  aims-outcomes.md  dapr-config-slim.yaml
.github/workflows/: build-and-deploy.yaml
docs/adr/: 0001-record-architecture-decisions.md  0002-use-dapr.md  0004-deploy-hr-api-in-dapr.md  0005-use-kettanaito-naming-cheatsheet.md  README.md
hr/: Cargo.toml
hr/src/: main.rs
lib/hr/: Cargo.toml  Dockerfile  Makefile
lib/hr/src/: main.rs
lib/slack/: .dockerignore  Dockerfile  Makefile  README.md  exampleRequest.txt  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
lib/slack/src/: core.ts  domain.ts  index.ts  infrastructure.ts  tracer.ts
manifests/: ingress-controller.yaml  ingress.yaml  zipkin-configuration.yaml
manifests/bases/hr/: deployment.yaml  kustomization.yaml  namespace.yaml  service-account.yaml  service.yaml
manifests/bases/slack/: deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
manifests/hr/: deployment.yaml  kustomization.yaml  service-account.yaml  service.yaml
manifests/overlays/development/: kustomization.yaml  patch.yaml
manifests/overlays/production/: kustomization.yaml
manifests/slack/: deployment.yaml  kustomization.yaml  kustomize.yaml  service-account.yaml  service.yaml
