[package]
name = "hr"
version = "0.1.0"
authors = ["Cedd Burge <ceddlyburge@gmail.com>"]
edition = "2018"

[dependencies]
async-graphql = { version = "2.7.1", features = ["tracing"] }
async-graphql-tide = "2.7.1"
async-std = "1.9.0"
opentelemetry = "0.14.0"
tracing-opentelemetry = "0.13.0"
tracing-subscriber = "0.2.18"
tide = "0.16.0"
tide-tracing = "0.0.11"
tracing = "0.1.26"
