[package]
name = "hr"
version = "0.1.0"
authors = ["Cedd Burge <ceddlyburge@gmail.com>"]
edition = "2018"

[dependencies]
async-graphql = "2.7.1"
async-graphql-tide = "2.7.1"
async-std = "1.9.0"
opentelemetry = { version = "0.14.0", features = ["rt-async-std"] }
tide = "0.16.0"
opentelemetry-tide = "0.9.0"
opentelemetry-zipkin = "0.12.0"
